--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    p\n",
+    "    open = []\n",
+    "    for\n",
     "    pass"
    ]
   },
