Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -290,8 +290,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
-    "    for restaurant in restaurants:\n",
-    "        if\n",
+    "    for\n",
     "    pass"
    ]
   },
